[project]
name = "dowker-complex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "m-a-huber", email = "hubermarius@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gudhi>=3.11.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "shapely>=2.0.7",
]

[project.scripts]
dowker-complex = "dowker_complex:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
