[project]
name = "dowker-complex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "m-a-huber", email = "mariushuber2@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gudhi>=3.11.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.1",
    "typing-extensions>=4.14.1",
]

[project.scripts]
dowker-complex = "dowker_complex:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.1",
    "twine>=6.1.0",
]
